fix light mode winners contrast (#1466)

--- a/static/players.css
+++ b/static/players.css
@@ -61,6 +61,9 @@ td rating {
 .card div.info0 a {
     color: WhiteSmoke;
 }
+.winners .card div.info0 a {
+    color: var(--clock-running-color);
+}
 div.info0.icon::before {
     opacity: 0.9;
 }
